# rrolf

./: .clang-format  .dockerignore  .env  .gitignore  .gitpod.yml  Dockerfile  README.md  a.txt  cache.txt  converter.js  craft-simulator.c  deploy_new_rivet_version.js  package-lock.json  package.json  reorder.js  rivet.toml  rivet.version.toml  run.sh  start.sh  svg-parser.js  test-db.js  test.c  upload_core_dump.sh
Client/: CMakeLists.txt  DOM.c  DOM.h  Entity.hh  Game.c  Game.cc  Game.h  Game.hh  InputData.c  InputData.h  Main.c  Main.cc  Mobile.c  Mobile.h  Particle.c  Particle.h  Renderer.c  Renderer.cc  Renderer.h  Renderer.hh  Simulation.c  Simulation.cc  Simulation.h  Simulation.hh  Socket.c  Socket.cc  Socket.h  Socket.hh  Storage.c  Storage.h
Client/Assets/: Init.c  Init.h  Render.h  RenderFunctions.h  RenderMisc.c  RenderMobs.c  RenderPetals.c  RenderRarityBackground.c  RenderText.c
Client/Assets/MapFeature/: BeechTree.c  BeechTree.h  Fern1.h  Fern2.h  Fern3.c  Fern3.h  Fern4.h  Fern5.h  Moss.c  Moss.h  PalmTree.h  WaterLettuce.c  WaterLettuce.h
Client/Assets/Mob/: Ankylosaurus.c  Ant.c  Beehive.c  Dakotaraptor.c  Dragonfly.c  Edmontosaurus.c  Fern.c  Honeybee.c  Hornet.c  HouseCentipede.c  Kelp.c  KingMackarel.c  Lanternfly.c  Meteor.c  Ornithomimus.c  Pachycephalosaurus.c  Pectinodon.c  Pteranodon.c  Quetzalcoatlus.c  Rex.c  SeaSnail.c  Seagull.c  Spider.c  Stump.c  Stump.h  Tree.c  Triceratops.c
Client/Assets/Mob/Ankylosaurus/: Body.c  Body.h  Head.c  Head.h  Tail.c  Tail.h
Client/Assets/Mob/Dakotaraptor/: Body.c  Body.h  (+8 more)
Client/Assets/Tile/: 1.c  1.h  2.c  2.h  3.c  3.h  Garden.c  HellCreek.c  Ocean.c
Client/Component/: Ai.cc  Ai.hh  ArenaInfo.cc  ArenaInfo.hh  Basic.cc  Basic.hh  Drop.cc  Drop.hh  Flower.cc  Flower.hh  Heal.cc  Heal.hh  Life.cc  Life.hh  Mob.cc  Mob.hh  Petal.cc  Petal.hh  Physical.cc  Physical.hh  PlayerInfo.cc  PlayerInfo.hh  Projectile.cc  Projectile.hh  Render.cc  Render.hh
Client/Renderer/: Common.c  ComponentRender.h  Native.c  Native.cc  RenderArena.c  RenderDrop.c  RenderFlower.c  RenderFunctions.c  RenderFunctions.h  RenderHealth.c  RenderMob.c  RenderPetal.c  RenderWeb.c  Renderer.h  Wasm.c
Client/System/: DeletionAnimation.c  DeletionAnimation.h  GameRenderer.cc  GameRenderer.hh  Interpolation.c  Interpolation.cc  Interpolation.h  Interpolation.hh  ParticleRender.c  ParticleRender.h  Renderer.cc
Client/Ui/: Button.c  Button.cc  Button.hh  ButtonTypes.cc  ButtonTypes.hh  ChooseElement.c  CloseButton.c  Container.c  Container.cc  Container.hh  Crafting.c  DrawPetal.cc  DrawPetal.hh  DynamicButton.cc  DynamicButton.hh  Element.c  Element.cc  Element.h  Element.hh  Engine.c  Engine.h  Engine.hh  Icon.c  InGameSquadUi.c  InventoryUi.c  LabeledButton.cc  LabeledButton.hh  LoadoutUi.c  MobButton.cc  MobButton.hh  PairedButton.c  PetalButton.cc  PetalButton.hh  RenderFunctions.cc  RenderFunctions.hh  Rivet.c  ScrollContainer.c  Settings.c  Slider.c  SquadUi.c  (+11 more)
Client/Ui/InGame/: AntiAfk.c  Chat.c  Deathscreen.c  Loadout.c  Minimap.c  PetalsCollected.c  Squad.c  Wave.c
Client/Ui/TitleScreen/: Account.c  BiomeButton.c  Changelog.c  Crafting.c  DevSquadPanel.c  Discord.c  Github.c  Inventory.c  LevelBar.c  MobGallery.c  Rivet.c  Settings.c  Squad.c  _acc.c
Client/Ui/Tooltip/: Mob.c  Petal.c  Squad.c
Client/Util/: Lerp.hh
Client/public/: index.html  rrolf-client  rrolf-client.wasm  transfer.html
Client/src/: Entity.hh  Main.cc  Renderer.cc  Renderer.hh  Simulation.cc  Simulation.hh  Socket.cc  Socket.hh
Client/src/Component/: Flower.cc  Flower.hh  Life.cc  Life.hh  Physical.cc  Physical.hh  Physics.cc  Physics.hh  Position.cc  Position.hh  Render.cc  Render.hh
Client/src/System/: Interpolation.cc  Interpolation.hh  Renderer.cc  Renderer.hh
Client/src/public/: index.html  rrolf-client  rrolf-client.wasm
MasterServer/: Cargo.toml  client.js  database.json  forcemerge.js  gameserver.js  linklogs.json  logs.txt  main.js  merge.js  package-lock.json  package.json  pid  protocol.js  purge.js  reset.js  rng.js  rwolf-database.json
MasterServer/src/: main.rs
Server/: CMakeLists.txt  Client.c  Client.cc  Client.h  Client.hh  EntityAllocation.c  EntityAllocation.h  EntityDetection.c  EntityDetection.h  Logs.c  Logs.h  Main.c  Main.cc  Server.c  Server.cc  Server.h  Server.hh  Simulation.c  Simulation.cc  Simulation.h  Simulation.hh  SpatialHash.c  SpatialHash.cc  SpatialHash.h  SpatialHash.hh  Squad.c  Squad.h  UpdateProtocol.c  UpdateProtocol.h  Vector.cc  Vector.hh  Waves.c  Waves.h  a.out  callgrind.out.1277608  callgrind.out.1353754  cg.txt
Server/Component/: Ai.cc  Ai.hh  ArenaInfo.cc  ArenaInfo.hh  Basic.cc  Basic.hh  Drop.cc  Drop.hh  Flower.cc  Flower.hh  Heal.cc  Heal.hh  Life.cc  Life.hh  Mob.cc  Mob.hh  Petal.cc  Petal.hh  Physical.cc  Physical.hh  PlayerInfo.cc  PlayerInfo.hh  Projectile.cc  Projectile.hh  Render.cc  Render.hh
Server/MobAi/: Aggressive.c  Ai.h  Helpers.c  Hybrid.c  Neutral.c  Passive.c
Server/System/: Ai.c  Ai.h  Camera.c  Camera.h  Centipede.c  Centipede.h  CollisionDetection.c  CollisionDetection.h  CollisionDetector.cc  CollisionDetector.hh  CollisionResolution.c  CollisionResolution.h  CollisionResolver.cc  CollisionResolver.hh  Damage.cc  Damage.hh  DropCollector.cc  DropCollector.hh  Drops.c  Drops.h  Health.c  Health.h  MapBoundaries.cc  MapBoundaries.hh  MapBoundary.c  MapBoundary.h  MobAi.cc  MobAi.hh  Petal.cc  Petal.hh  PetalBehavior.c  PetalBehavior.cc  PetalBehavior.h  PetalBehavior.hh  Respawn.c  Respawn.h  System.h  Velocity.c  Velocity.cc  Velocity.h  (+4 more)
Server/src/: Client.cc  Client.hh  Entity.cc  Entity.hh  Main.cc  Server.cc  Server.hh  Simulation.cc  Simulation.hh  SpatialHash.cc  SpatialHash.hh  Vector.cc  Vector.hh
Server/src/Component/: Flower.cc  Flower.hh  Life.cc  Life.hh  Physical.cc  Physical.hh  Physics.cc  Physics.hh  Position.cc  Position.hh  Render.cc  Render.hh
Server/src/Entity/: Entity.cc  Entity.hh
Server/src/System/: CollisionDetector.cc  CollisionDetector.hh  CollisionResolver.cc  Damage.cc  Physics.cc  Physics.hh  Velocity.cc  Velocity.hh
(+146 files in other folders)
