[package]
name = "rrolf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.29.1", features = ["full"] }
actix-web = "4.3.1"
reqwest = "0.11.18"
serde_json = "1.0.101"
serde = { version = "1.0.171", features = ["derive"] }
