[package]
name = "MasterServer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.1"
actix-cors = "0.6.4"
actix-web = "4.4.0"
actix-web-actors = "4.2.0"
async-recursion = "1.0.5"
hex = "0.4.3"
lazy_static = "1.4.0"
rand = "0.8.5"
reqwest = { version = "0.11", features = ["json", "tokio-native-tls"] }  # Include the json feature
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
sha2 = "0.10.8"
tokio = { version = "1.33.0", features = ["full"] }
uuid = "1.4.1"
